--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 								<th>Owner</th>
 								<th>Status</th>
 								<th>WINS Status</th>
-								<th>Created</th>
-								<th>Updated</th>
+								<th>Created Date</th>
+								<th>Updated Date</th>
 								<th>Age (days)</th>
 								<th>Actions</th>
 							</tr>
@@ -143,6 +143,7 @@
 
 		<footer>
 			<small>Local demo — data stored in your browser.</small>
+			<small>j.hutalla.</small>
 		</footer>
 
 		<script src="app.js"></script>
