--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<main>
 			<!-- Login Form -->
-			<section id="login-section" class="card">
+			<section id="form-popup" class="card">
 				<h2>Login</h2>
 				<form id="login-form">
 					<label for="username">Username</label>
